[package]
name = "voxel-ray-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.5"
wgpu = "0.15.0"
env_logger = "0.10"
log = "0.4"
pollster = "0.2"
fastrand = "^1.0"

egui = { git = "https://github.com/emilk/egui.git" }
egui-wgpu = { git = "https://github.com/emilk/egui.git" }
egui-winit = { git = "https://github.com/emilk/egui.git" }

[dependencies.bytemuck]
version = "1.13.0"
features = ["derive", "min_const_generics", "extern_crate_alloc"]
