[package]
name = "voxel-ray-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.1"
wgpu = "0.15.1"
env_logger = "0.10"
log = "0.4.17"
pollster = "0.3.0"
fastrand = "^1.0"

egui = "0.21"
egui-wgpu = "0.21"
egui-winit = "0.21"

[dependencies.bytemuck]
version = "1.13.0"
features = ["derive", "min_const_generics", "extern_crate_alloc"]
