[package]
name = "blockworld-client-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
client = { package = "blockworld-client", path = "../client" }
glam = "0.31.0"
wgpu = "27.0.1"
env_logger = "0.11.8"
pollster = "0.4.0"
dirs = "6.0.0"
anyhow = "1.0.98"
winit = "0.30.12"

egui = "0.33.3"
egui-winit = "0.33.3"
egui-wgpu = "0.33.3"
