[package]
name = "blockworld-server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { package = "blockworld-common", path = "../common" }
anyhow = "1.0.93"
glam = "0.31.0"
# postcard = { version = "1.1.3", features = ["alloc"] }
bincode = { version = "2.0.0", features = ["serde"]}
fastrand = "2.3.0"
